--- a/styles.css
+++ b/styles.css
@@ -1,346 +1,710 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
 *{
-    margin: auto;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: "Lato", sans-serif;
+    font-family: "Mulish", sans-serif;
 }
 
-main{
-    border: 2px solid red;
-    /* display: flex; */
-    height: 100%;
-
+html{
+    background-color: #fffaed;
 }
 
 .genLayout{
-    /* margin-left: 3rem; */
-    border: 2px solid green;
+    max-width: 1100px;
+    margin: auto;
 }
 
-.genLayout1{
-    /* margin-bottom: 10rem; */
-    border: 2px solid red;
-    /* margin-right: 2rem; */
-    /* width: 500px; */
-    /* display: flex; */
-    /* height: 300px; */
+header, nav{
+    background: linear-gradient(90deg, #fffaed 42.15%,#f8dd44 42.15%);
 }
 
-.genLayout1 > a{
+nav{
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.innerNav{
+    padding-block: 16px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navLeft{
+    width: 120px;
+    height: 45px;
+    /* border: red 1px solid; */
+}
+.navLeft > img{
+    width: 100%;
+    height: 100%;
+}
+
+.hamburger, #toggle{
+    display: none;
+}
+
+
+.navRight{
+    /* border: green 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+}
+.btnStyle{
+    background-color: #e94f37;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 16px 25px;
+}
+
+.navLinks{
+    padding-top: 16px;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px red solid; */
+}
+.navLinks > a{
+    text-transform: capitalize;
     text-decoration: none;
-    /* margin-right: 2.2rem; */
+    font-weight: bold;
+    color: #000;
+    /* border: 1px rgb(0, 255, 102) solid; */
 }
 
-
-.box{
+.hero{
     display: flex;
-    /* border: 2px solid blue; */
-    background-color: rgba(2, 68, 0);
-    height: 200px;
+    align-items: center;
+    gap: 3rem;
 }
 
- .bigBox{
-    border: 2px solid red;
-    /* display: flex; */
-    height: 1000px;
-
-    /* width: 200px;
-    height: 200px; */
-    /* padding-top: 6rem; */
+.heroText{
+   width: 40%;
+    /* border: blue 1px solid;  */
+}
+.heroText > h1{
+    text-transform: capitalize;
+    font-size: 40px;
+    width: 400px;
+}
+.heroText > p{
+    width: 400px;
+    margin-block: 1rem ;
+}
+.heroText > button{
+    width: fit-content;
 }
 
-.biggBox{
-    /* border: 2px solid blue; */
-    height: 300px;
+.heroImage{
+    width: 65%;
+    height: 80vh;
+}
+.heroImage > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0 8px 0 0;
+}
+
+#bio{
+    padding-block: 48px;
+    background-color: #08605f;
+}
+.theBios{
     display: flex;
+    gap: 16px;
+}
+.his1{
+    color: #fff;
 }
 
-.reach1{
-    /* border: 2px solid blue; */
-    background-color: blanchedalmond;
-    width: 350px;
-    border-radius: 5px;
-    height: 250px;
-    margin-right: -2rem;
-    /* display: block;
-    justify-content: center;
-    align-items: center; */
+.his1 > h1{
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
 }
-.reach2{
-    /* border: 2px solid blue; */
-    background-color: blanchedalmond;
-    width: 350px;
-    border-radius: 5px;
-    height: 250px;
-    margin-right: -2rem;
-    
-    /* display: block;
-    justify-content: center;
-    align-items: center; */
-}
-.reach3{
-    /* border: 2px solid blue; */
-    background-color: blanchedalmond;
-    width: 350px;
-    border-radius: 5px;
-    height: 250px;
-    /* display: block;
-    justify-content: center;
-    align-items: center; */
+.his1 > p{
+    font-size: 12px;
 }
 
-/* .reach > img{
-    border: 2px solid green; 
-    height: 5.8rem;
-     border-radius: 70%;
-    margin-left: 5rem;
+.history{
+    /* border: 2px solid greenyellow; */
+    background-color: grey;
+    max-width:100%;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3.5rem;
+    gap: 2rem;
+}
+
+.icon{
+    background-color: antiquewhite;
+    /* border: 2px solid; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 55%;
+    border-radius: 60%;
+    margin-top: 4rem;
+    margin-left: 7.2rem;
+}
+.icon>i{
+    font-size: larger;
+}
+
+#pros{
+    position: relative;
+    overflow: hidden;
+}
+
+.flowers{
+    width: 2150px;
+    /* height: 20vh; */
+    /* border: pink solid; */
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    margin-left: 69rem;
     margin-top: 2rem;
-    background-color: black;
-}  */
+}
 
-.image{
-    /* border: 2px solid brown; */
-    margin-top: 3rem;
+.proSec{
+    justify-content: space-between;
+    /* border: red solid; */
+    display: flex;
+    gap: 20px;
+    margin-top: 80px;
+}
+
+.proCardStyle{
+    background-color: #fff;
+    width: 410px;
+    height: auto;
+    padding: 36px 12px;
+    border-radius: 4px;
+    /* border: blue solid; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;    
+    gap: 20px;
+}
+.proCard1 > span{
+    background-color: #fbdcd7;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: rgb(244, 244, 244) .7px solid;
     width: 100px;
     height: 100px;
-    border-radius: 50%;
-    background-color: pink;
-
 }
 
-.image > img{
-    width: 60px;
-    height: 40px;
-    margin-left: 1.2rem;
-    margin-top: 1.8rem;
-}
-.reach1 >h4{
-    font-size: small;
-    margin-left: 9rem;
-
+.proCard1 > span > i{
+    color: #e84c35;
+    font-size: 50px;
 }
 
-.reach1 > p{
-    font-size: small;
-    margin-left: 5rem;
+.proCard2 > span > i{
+    color: #237170;
+    font-size: 50px;
 }
-.reach2 >h4{
-    font-size: small;
-    margin-left: 8rem;
-
-}
-
-.reach2 > p{
-    font-size: small;
-    margin-left: 6rem;
-}
-.reach3 >h4{
-    font-size: small;
-    margin-left: 8rem;
-
-}
-
-.reach3 > p{
-    font-size: small;
-    margin-left: 5rem;
-}
-
-.page{
-    /* border: 2px solid green; */
-}
-
-.page > h1{
-    margin-left: 3.5rem;
-}
-
-.pages{
-    /* border: 2px solid black; */
+.proCard2 > span{
+    background-color: #cee0e0;
+    border-radius: 100%;
     display: flex;
-}
-
-
-.actiVities1{
-    border: 2px solid #eee;
-    border-radius: 5%;
-    display: flex;
-    width: 450px;
-    margin-left: 3.4rem;
-}
-
-.recent1{
-    /* border: 2px solid purple; */
-    /* border-radius: 5%; */
-    justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 300px;
-}
-
-.recent1 > h3{
-    margin-top: 1rem;
-    margin-left: 1rem;
-}
-
-.recent1 > p{
-    margin-left: 1rem;
-}
-
-.recent1 > button{
-    border: 2px solid green;
-    width: 80px;
-    height: 40px;
-    border-radius: 10%;
-    background-color: white;
-    margin-left: 1rem;
-}
-
-.pic1{
-    /* border: 2px solid blue; */
-    border-radius: 5%;
-    height: 300px;
-}
-
-.pic1 > img{
-    height: 300px;
-    border-top-right-radius: 5%;
-}
-.actiVities2{
-    border: 2px solid #eee;
-    border-radius: 5%;
-    display: flex;
-    width: 450px;
-    margin-right: .1rem;
-}
-
-.recent2{
-    /* border: 2px solid purple; */
     justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 300px;
+    border: rgb(244, 244, 244) .7px solid;
+    width: 100px;
+    height: 100px;
 }
 
-.recent2 > h3{
-    margin-top: 1rem;
-    margin-left: 1rem;
+.proCard3 > span > i{
+    color: #fddf3f;
+    font-size: 50px;
 }
-
-.recent2 > p{
-    margin-left: 1rem;
-}
-
-.recent2 > button{
-    border: 2px solid green;
-    width: 80px;
-    height: 40px;
-    border-radius: 10%;
-    background-color: white;
-    margin-left: 1rem;
-}
-
-.pic2{
-    /* border: 2px solid blue; */
-    border-radius: 5%;
-    height: 300px;
-}
-
-.pic2 > img{
-    height: 300px;
-    border-radius: 5%;
-}
-.actiVities3{
-    border: 2px solid #eee;
-    border-radius: 5%;
+.proCard3 > span{
+    background-color: #fef8d8;
+    border-radius: 100%;
     display: flex;
-    width: 230px;
-    margin-right: 3rem;
-}
-
-.recent3{
-    /* border: 2px solid purple; */
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    border: rgb(244, 244, 244) .7px solid;
+    width: 100px;
+    height: 100px;
+}
+
+.proCardText{
     width: 300px;
-    height: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: center;
 }
 
-.recent3 > h3{
-    margin-top: 1rem;
-    margin-left: 1rem;
+.btn{
+    background-color: #fff;
+    color: #08605f;
+    border: 1px solid #08605f;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 12px 20px;
+    width: fit-content;
 }
 
-.recent3 > p{
-    margin-left: 1rem;
+#activities{
+    padding-left: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+    margin-top: 80px;
+    /* border: red 1px solid; */
 }
 
-.recent3 > button{
-    border: 2px solid green;
-    width: 80px;
-    height: 40px;
-    border-radius: 10%;
-    background-color: white;
-    margin-left: 1rem;
+.recentCards{
+    overflow: hidden;
+    /* border: red 1px solid; */
+    display: flex;
+    gap: 32px;
+}
+.recentCard{
+    background-color: #fff;
+    padding-left: 12px;
+    width: fit-content;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    /* border: solid 1px rgb(0, 255, 60); */
 }
 
-.pic3{
-    /* border: 2px solid blue; */
-    border-radius: 5%;
-    height: 300px;
+.recentText{
+    /* border: pink solid; */
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    width: 220px;
+}
+.recentText > h3{
+    font-weight: bold;
+    font-size: 22px;
 }
 
-/* .pic3 > img{
-    height: 300px;
+.recentImage{
+    /* border: blue solid 1px; */
+    position: relative;
+    width: 300px;
+    height: 45vh;
+}
+.recentImage > img{
+    border-radius: 0 8px 8px 0;
+    width: 100%;
+    height: 100%;
+}
+
+.ImageText{
+    color: #bfbdbd;
+    background-color: #2f2f31;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 37px;
+    margin-top: 280px;
+    /* border: green solid 1px; */
+}
+
+.donation{
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+
+#events{
+    padding-top: 100px;
+    position: relative;
+}
+
+.flowerpic{
+    width: 800px;
+    height: 830px;
+    /* border: pink solid; */
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    margin-left: -450px;
+}
+.flowerpic > img{
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
+    /* rotate: -10deg; */
+}
+.eventsBox{
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+}
+
+.upcoming{
+    display: flex;
+    gap: 52rem;
+    margin-top: 2rem;
+}
+/* .eventsBoxgenLayout{
+    margin: 4rem;
+    justify-content: space-between;
 } */
 
+.donationCard{
+    display: block;
+    border: 1px solid whitesmoke;
+    background-color: whitesmoke;
+    padding: 1rem;
+    border-radius: 1rem;
+    
 
-.Dad{
-    /* border: 2px solid black; */
+}
+.active{
     display: flex;
-    height: 200px;
+    
+    border: 1px solid;
+    border-radius: 1rem;
+    background-color: #08605f;
+    padding: 1rem;
+    gap: 1.4rem;
+    width: 400px;
+
+
+}
+.default{
+    display: flex;
+    /* border: 1px solid; */
+    background-color: whitesmoke;
+    padding: 1rem;
+    gap: 1.4rem;
+    width: 400px;
+
 }
 
-.up{
-    margin-left: 3rem;
+.donationText{
+    width: 80%;
+}
+
+.latest{
+    display: flex;
+    gap: 55.5rem;
+    margin-top: 2rem;
+}
+
+.latestCards{
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.latestCard{
+    width: 340px;
+    /* border: red 1px solid; */
+    border-radius: 8px;
+    background-color: #fff;
+}
+.latestPic{
+    width: 100%;
+    height: 220px;
+}
+.latestPic > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.latestText{
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+.latestText > h4{
+    font-size: 20px;
+}
+
+.latestTxt{
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.latestTxt > h4{
+    font-size: 20px;
+}
+.latestIcons{
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 40px;
+}
+.latestIcon{
+    display: flex;
+    gap: 8px;
+    display: flex;
+    align-items: center;
+}
+.upComing{
+    display: flex;
+    gap: 48rem;
+    margin-top: 2rem;
 }
 
 
 
-.mum{
-    border: 2px solid #eee;
-    border-radius: 5%;
-    width: 500px;
-    margin-bottom: 5rem;
-    margin-left: 3.5rem;
-    height: 120px;
+
+#hear{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    position:relative;
 }
-.don{
-    /* border: 2px solid gray; */
-    border-radius: 4%;
-    margin-left: .5rem;
-    background-color: green;
+
+
+
+.slideBox{
+    display: flex;
+    align-items: center;
+    /* border: red 2px solid; */
+    /* width: fit-content; */
+    margin: 5rem;
+    gap: 5rem;
+}
+.slideBox > span > i{
+    font-size: 48px;
+}
+.slideCard{
+    width: 750px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 20px 20px 20px 28px;
+    box-shadow: 1px 1px 25px 2px rgba(160, 160, 160, 0.24);
+    border-radius: 8px;
+}
+
+.slideCards{
+    position: relative;
+    display: flex;
+}
+.slideCards .slideCard:nth-child(3) {
+    /* border: rgb(72, 0, 255) solid; */
+    z-index: 2;
+    margin-left: -12px;
+    margin-top: 26px;
+    rotate: -1deg;
+    position: absolute;
+    top: 0;
+}
+.slideCards .slideCard:nth-child(2) {
+    /* border: rgb(72, 0, 255) solid; */
+    /* z-index: 2; */
+    /* margin-left: -12px; */
+    margin-top: 8px;
+    rotate: .9deg;
+    /* position: absolute; */
+    /* top: 0; */
+}
+.slideCards .slideCard:nth-child(1) {
+    /* border: rgb(72, 0, 255) solid; */
+    z-index: -2;
+    /* margin-left: -12px; */
+    /* margin-top: 14px; */
+    /* rotate: -1deg; */
+    position: absolute;
+    top: 0;
+}
+
+.slideText{
+    width: 300px;
+    /* height: 700px; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+}
+.slideVid{
+    width: 350px;
+    height: 350px;
+    border-radius: 8px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.slideVid > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+.slideVid > span{
+    background-color: #fddf3f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
     height: 50px;
-    width: 480px;
-    margin-top: .5rem;
+    border-radius: 100%;
+    /* border: blue solid; */
+    position: absolute;
+    /* top: 0; */
+}
+.slideVid > span > i{
+    font-size: 18px;
 }
 
-.date{
-    /* border: 2px solid brown; */
-    margin-left: .5rem;
+.flower1{
+    width: 160px;
+    height: 160px;
+    /* border: red solid; */
+    position: absolute;
+    top: 0;
+    margin-left: 52rem;
+    margin-top: 8rem;
+    z-index: -2;
+}
+.flower2{
+    width: 53px;
+    height: 53px;
+    /* border: rgb(34, 0, 255) solid; */
+    position: absolute;
+    top: 0;
+    margin-left: 59.5rem;
+    margin-top: 19rem;
+    z-index: -2;
+}
+.flower3{
+    width: 220px;
+    height: 220px;
+    /* border: rgb(0, 255, 81) solid; */
+    position: absolute;
+    top: 0;
+    margin-right: 150rem;
+    margin-top: 31rem;
+    z-index: -2;
+}
+.flowerImg{
+    width: 100%;
+    height: 100%;
 }
 
-.donaTion{
-    /* border: 2px solid green; */
-    margin-bottom: 5rem;
-    margin-right: 7rem;
+#needy{
+    margin-top: 200px;
+    padding-top: 85px;
+    background-color: #08605f;
+    background-image: url(imges/needy.jpeg);
+    height: 200px;
+    /* display: flex;
+    align-items: center; */
+}
+.needyBox{
+    padding-inline: 60px;
+    /* border: red solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.needyBox > button{
+    background-color: #fddf3f;
+    color: #000;
+}
+.needyText > h3{
+    color: #fff;
+    font-size: 36px;
 }
 
-..donaTion > h4{
-    font-weight: 700;
+/* .footerLeft > span{
+    width: 100px;
+    height:100px;
+    border: red solid;
+} */
+
+footer{
+    background-color: #363537;
 }
 
-.donaTion > p{
-    font-size: smaller;
-    opacity: .4;
+.innerFooter{
+    /* border: green solid; */
+    display: flex;
+    padding: 30px 150px 60px 60px;
+    justify-content: space-between;
+    background-image: url(imges/awa\ dwn.jpeg);
+}
+
+.footerLeft{
+    /* border: red solid; */
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.footerLeft > span > img{
+    width: 150px;
+    /* height: ; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footerLeft > p{
+    width: 350px;
+    color: #fff;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+ul > a{
+    text-decoration: none;
+    color: #898b86;
+}
+
+
+.footerLinks{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+.footerLinks > h4{
+    font-size: 18px;
+    color: #fff;
+}
+
+.footerRight{
+    /* border: blue solid; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 85px;
+}
+
+.copyright{
+    padding-block: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin: auto;
+    color: #898b86;
+    /* color: #fff; */
+}
+.copyright > h6{
+    font-size: 12px;
 }
